<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background= "@mipmap/back"
    tools:context="alexandertech.mymonteuniversityhub.Activities.LoginActivity"
    android:weightSum="1">


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="25dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="314dp"
                android:layout_height="100dp"
                android:id="@+id/csumb"
                android:layout_marginBottom="5dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/otter"
                android:layout_marginTop="25dp"
                android:layout_weight="0.51" />


            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="#ffffff"
                android:lineSpacingExtra="1dp"
                android:layout_marginBottom="10dp"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#FFFFFF"

                    android:drawableLeft="@mipmap/ic_account_circle_black_24dp"
                    android:drawablePadding="10dp"

                    android:gravity="center_vertical"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#7f8c8d"
                    android:textSize="25dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#FFFFFF"
                    android:drawableLeft="@mipmap/ic_vpn_key_black_24dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="Password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#7f8c8d"
                    android:textSize="25dp"
                    />

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/csumb_blue"
                    android:text="Login"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/guestLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_dark"
                    android:text="Demo Mode"
                    android:textColor="#ffffff" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
