...
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dialog_message">This will remove your previously saved location.</string>
    <string name="dialog_title">Save new parking location?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_task">Add New Task</string>
    <string name="what_do_you_need_to_do">What do you need to do?</string>
    <string name="due_date">Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="save">Save</string>
...
